finalizado modo phone

--- a/index.html
+++ b/index.html
@@ -32,28 +32,35 @@
 
       <h3 class="container__summary_title">Summary</h3>
       <section>
-        <div>  
-          <p>Reaction</p>
+        <div class="container__summary_Reaction">
+          <div class="Reaction_img">
+            <img src="assets/images/icon-reaction.svg" alt="reaction">  
+            <p> Reaction</p>
+          </div>
           <p class="container__summary_percentage"> <span>80</span> / 100</p>
         </div>
-
-        <div>
-          <p>Memory</p>
-          <p class="container__summary_percentage">92 / 100</p>
+        <div class="container__summary_Memory">
+          <div class="Memory_img">
+            <img src="assets/images/icon-memory.svg" alt="memory">  
+            <p> Memory</p>
+          </div>
+          <p class="container__summary_percentage"> <span>92</span> / 100</p>
         </div>
-
-        <div>
-          <p>Verbal</p>
-          <p class="container__summary_percentage">61 / 100</p>
+        <div class="container__summary_Verbal">
+          <div class="Verbal_img">
+            <img src="assets/images/icon-verbal.svg" alt="Verbal">  
+            <p>Verbal</p>
+          </div>
+          <p class="container__summary_percentage"> <span>61</span> / 100</p>
         </div>
-
-        <div>
-          <p>Visual</p>
-          <p class="container__summary_percentage">72 / 100</p>
+        <div class="container__summary_Visual">
+          <div class="Visual_img">
+            <img src="assets/images/icon-visual.svg" alt="Visual">  
+            <p>Visual</p>
+          </div>
+          <p class="container__summary_percentage"> <span>72</span> / 100</p>
         </div>
-
       </section>
-
       <button>
         Continue
       </button>
@@ -61,9 +68,6 @@
   </section>
 
 
-<!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->  
+ 
 </body>
 </html>
